--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	  <div class="diver">
 	    <div class="logo"></div>
 	    <h1>
-		  Thank you for your interest in our 10750NAT
+		  Thank you for your interest in our SALAM
 		</h1>
 	  </div>
 	  <div  class="blue">
